[package]
name = "actor-examples"
version = "0.1.0"
authors = ["mic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-web = {git = "https://github.com/actix/actix-web.git"}
serde="1.0.125"
tokio-postgres="0.7.2"
deadpool-postgres="0.9.0"
futures="0.3.15"
